# stripe-auto-generated

./: format.sh  openapi-configuration.yml
lib/: stripeapi.cabal
lib/src/: StripeAPI.hs
lib/src/StripeAPI/: Common.hs  TypeAlias.hs  Types.hs
lib/src/StripeAPI/Operations/: DeleteSubscriptionsSubscriptionExposedId.hs  GetCheckoutSessionsSession.hs  GetPrices.hs  GetSubscriptions.hs  PostBillingPortalSessions.hs  PostCheckoutSessions.hs  PostCustomers.hs
lib/src/StripeAPI/Types/: Account.hs  Account.hs-boot  AccountAnnualRevenue.hs  AccountAnnualRevenue.hs-boot  AccountBacsDebitPaymentsSettings.hs-boot  AccountBrandingSettings.hs-boot  AccountBusinessProfile.hs  AccountBusinessProfile.hs-boot  AccountCapabilities.hs  AccountCapabilities.hs-boot  AccountCardIssuingSettings.hs-boot  AccountCardPaymentsSettings.hs-boot  AccountDashboardSettings.hs-boot  AccountDeclineChargeOn.hs-boot  AccountFutureRequirements.hs  AccountFutureRequirements.hs-boot  AccountGroupMembership.hs  AccountGroupMembership.hs-boot  AccountInvoicesSettings.hs  AccountInvoicesSettings.hs-boot  AccountMonthlyEstimatedRevenue.hs  AccountMonthlyEstimatedRevenue.hs-boot  AccountPaymentsSettings.hs  AccountPaymentsSettings.hs-boot  AccountPayoutSettings.hs  AccountPayoutSettings.hs-boot  AccountRequirements.hs  AccountRequirements.hs-boot  AccountRequirementsAlternative.hs  AccountRequirementsAlternative.hs-boot  AccountRequirementsError.hs  AccountRequirementsError.hs-boot  AccountSepaDebitPaymentsSettings.hs-boot  AccountSettings.hs  AccountSettings.hs-boot  AccountTermsOfService.hs-boot  AccountTosAcceptance.hs-boot  AccountTreasurySettings.hs-boot  AccountUnificationAccountController.hs  AccountUnificationAccountController.hs-boot  (+1262 more)
