cabal-version: 1.12

name:           stripeapi
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      StripeAPI
      StripeAPI.Operations.PostBillingPortalSessions
      StripeAPI.Operations.PostCheckoutSessions
      StripeAPI.Operations.GetCheckoutSessionsSession
      StripeAPI.Operations.PostCustomers
      StripeAPI.Operations.GetPrices
      StripeAPI.Operations.GetSubscriptions
      StripeAPI.Operations.DeleteSubscriptionsSubscriptionExposedId
      StripeAPI.Types
      StripeAPI.TypeAlias
      StripeAPI.Types.Account
      StripeAPI.Types.AccountAnnualRevenue
      StripeAPI.Types.AccountBacsDebitPaymentsSettings
      StripeAPI.Types.AccountBrandingSettings
      StripeAPI.Types.AccountBusinessProfile
      StripeAPI.Types.AccountCapabilities
      StripeAPI.Types.AccountCardIssuingSettings
      StripeAPI.Types.AccountCardPaymentsSettings
      StripeAPI.Types.AccountDashboardSettings
      StripeAPI.Types.AccountDeclineChargeOn
      StripeAPI.Types.AccountFutureRequirements
      StripeAPI.Types.AccountGroupMembership
      StripeAPI.Types.AccountInvoicesSettings
      StripeAPI.Types.AccountMonthlyEstimatedRevenue
      StripeAPI.Types.AccountPaymentsSettings
      StripeAPI.Types.AccountPayoutSettings
      StripeAPI.Types.AccountRequirements
      StripeAPI.Types.AccountRequirementsAlternative
      StripeAPI.Types.AccountRequirementsError
      StripeAPI.Types.AccountSepaDebitPaymentsSettings
      StripeAPI.Types.AccountSettings
      StripeAPI.Types.AccountTermsOfService
      StripeAPI.Types.AccountTosAcceptance
      StripeAPI.Types.AccountTreasurySettings
      StripeAPI.Types.AccountUnificationAccountController
      StripeAPI.Types.AccountUnificationAccountControllerFees
      StripeAPI.Types.AccountUnificationAccountControllerLosses
      StripeAPI.Types.AccountUnificationAccountControllerStripeDashboard
      StripeAPI.Types.Address
      StripeAPI.Types.AlmaInstallments
      StripeAPI.Types.AmazonPayUnderlyingPaymentMethodFundingDetails
      StripeAPI.Types.ApiErrors
      StripeAPI.Types.Application
      StripeAPI.Types.ApplicationFee
      StripeAPI.Types.AutomaticTax
      StripeAPI.Types.BalanceTransaction
      StripeAPI.Types.BankAccount
      StripeAPI.Types.Billing_CreditBalanceTransaction
      StripeAPI.Types.Billing_CreditGrant
      StripeAPI.Types.BillingBillResourceInvoicingLinesCommonCreditedItems
      StripeAPI.Types.BillingBillResourceInvoicingLinesCommonProrationDetails
      StripeAPI.Types.BillingBillResourceInvoicingLinesParentsInvoiceLineItemInvoiceItemParent
      StripeAPI.Types.BillingBillResourceInvoicingLinesParentsInvoiceLineItemParent
      StripeAPI.Types.BillingBillResourceInvoicingLinesParentsInvoiceLineItemSubscriptionItemParent
      StripeAPI.Types.BillingBillResourceInvoicingParentsInvoiceParent
      StripeAPI.Types.BillingBillResourceInvoicingParentsInvoiceQuoteParent
      StripeAPI.Types.BillingBillResourceInvoicingParentsInvoiceSubscriptionParent
      StripeAPI.Types.BillingBillResourceInvoicingPricingPricing
      StripeAPI.Types.BillingBillResourceInvoicingPricingPricingPriceDetails
      StripeAPI.Types.BillingBillResourceInvoicingTaxesTax
      StripeAPI.Types.BillingBillResourceInvoicingTaxesTaxRateDetails
      StripeAPI.Types.BillingClocksResourceStatusDetailsAdvancingStatusDetails
      StripeAPI.Types.BillingClocksResourceStatusDetailsStatusDetails
      StripeAPI.Types.BillingCreditGrantsResourceAmount
      StripeAPI.Types.BillingCreditGrantsResourceApplicabilityConfig
      StripeAPI.Types.BillingCreditGrantsResourceApplicablePrice
      StripeAPI.Types.BillingCreditGrantsResourceBalanceCredit
      StripeAPI.Types.BillingCreditGrantsResourceBalanceCreditsApplicationInvoiceVoided
      StripeAPI.Types.BillingCreditGrantsResourceBalanceCreditsApplied
      StripeAPI.Types.BillingCreditGrantsResourceBalanceDebit
      StripeAPI.Types.BillingCreditGrantsResourceMonetaryAmount
      StripeAPI.Types.BillingCreditGrantsResourceScope
      StripeAPI.Types.BillingDetails
      StripeAPI.Types.BillingPortal_Configuration
      StripeAPI.Types.BillingPortal_Session
      StripeAPI.Types.CancellationDetails
      StripeAPI.Types.Card
      StripeAPI.Types.CardGeneratedFromPaymentMethodDetails
      StripeAPI.Types.CardIssuingAccountTermsOfService
      StripeAPI.Types.CashBalance
      StripeAPI.Types.Charge
      StripeAPI.Types.ChargeFraudDetails
      StripeAPI.Types.ChargeOutcome
      StripeAPI.Types.ChargeTransferData
      StripeAPI.Types.Checkout_Session
      StripeAPI.Types.CheckoutAcssDebitMandateOptions
      StripeAPI.Types.CheckoutAcssDebitPaymentMethodOptions
      StripeAPI.Types.CheckoutAffirmPaymentMethodOptions
      StripeAPI.Types.CheckoutAfterpayClearpayPaymentMethodOptions
      StripeAPI.Types.CheckoutAlipayPaymentMethodOptions
      StripeAPI.Types.CheckoutAmazonPayPaymentMethodOptions
      StripeAPI.Types.CheckoutAuBecsDebitPaymentMethodOptions
      StripeAPI.Types.CheckoutBacsDebitPaymentMethodOptions
      StripeAPI.Types.CheckoutBancontactPaymentMethodOptions
      StripeAPI.Types.CheckoutBoletoPaymentMethodOptions
      StripeAPI.Types.CheckoutCardInstallmentsOptions
      StripeAPI.Types.CheckoutCardPaymentMethodOptions
      StripeAPI.Types.CheckoutCashappPaymentMethodOptions
      StripeAPI.Types.CheckoutCustomerBalanceBankTransferPaymentMethodOptions
      StripeAPI.Types.CheckoutCustomerBalancePaymentMethodOptions
      StripeAPI.Types.CheckoutEpsPaymentMethodOptions
      StripeAPI.Types.CheckoutFpxPaymentMethodOptions
      StripeAPI.Types.CheckoutGiropayPaymentMethodOptions
      StripeAPI.Types.CheckoutGrabPayPaymentMethodOptions
      StripeAPI.Types.CheckoutIdealPaymentMethodOptions
      StripeAPI.Types.CheckoutKakaoPayPaymentMethodOptions
      StripeAPI.Types.CheckoutKlarnaPaymentMethodOptions
      StripeAPI.Types.CheckoutKonbiniPaymentMethodOptions
      StripeAPI.Types.CheckoutKrCardPaymentMethodOptions
      StripeAPI.Types.CheckoutLinkPaymentMethodOptions
      StripeAPI.Types.CheckoutLinkWalletOptions
      StripeAPI.Types.CheckoutMobilepayPaymentMethodOptions
      StripeAPI.Types.CheckoutMultibancoPaymentMethodOptions
      StripeAPI.Types.CheckoutNaverPayPaymentMethodOptions
      StripeAPI.Types.CheckoutOxxoPaymentMethodOptions
      StripeAPI.Types.CheckoutP24PaymentMethodOptions
      StripeAPI.Types.CheckoutPaycoPaymentMethodOptions
      StripeAPI.Types.CheckoutPaymentMethodOptionsMandateOptionsBacsDebit
      StripeAPI.Types.CheckoutPaymentMethodOptionsMandateOptionsSepaDebit
      StripeAPI.Types.CheckoutPaynowPaymentMethodOptions
      StripeAPI.Types.CheckoutPaypalPaymentMethodOptions
      StripeAPI.Types.CheckoutPixPaymentMethodOptions
      StripeAPI.Types.CheckoutRevolutPayPaymentMethodOptions
      StripeAPI.Types.CheckoutSamsungPayPaymentMethodOptions
      StripeAPI.Types.CheckoutSepaDebitPaymentMethodOptions
      StripeAPI.Types.CheckoutSessionPaymentMethodOptions
      StripeAPI.Types.CheckoutSessionWalletOptions
      StripeAPI.Types.CheckoutSofortPaymentMethodOptions
      StripeAPI.Types.CheckoutSwishPaymentMethodOptions
      StripeAPI.Types.CheckoutUsBankAccountPaymentMethodOptions
      StripeAPI.Types.ConnectAccountReference
      StripeAPI.Types.ConnectCollectionTransfer
      StripeAPI.Types.Coupon
      StripeAPI.Types.CouponAppliesTo
      StripeAPI.Types.CustomUnitAmount
      StripeAPI.Types.Customer
      StripeAPI.Types.CustomerAcceptance
      StripeAPI.Types.CustomerBalanceCustomerBalanceSettings
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceAdjustedForOverdraft
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceAppliedToPaymentTransaction
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceFundedTransaction
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceFundedTransactionResourceBankTransfer
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceFundedTransactionResourceBankTransferResourceEuBankTransfer
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceFundedTransactionResourceBankTransferResourceGbBankTransfer
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceFundedTransactionResourceBankTransferResourceJpBankTransfer
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceFundedTransactionResourceBankTransferResourceUsBankTransfer
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceRefundedFromPaymentTransaction
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceTransferredToBalance
      StripeAPI.Types.CustomerBalanceResourceCashBalanceTransactionResourceUnappliedFromPaymentTransaction
      StripeAPI.Types.CustomerCashBalanceTransaction
      StripeAPI.Types.CustomerTax
      StripeAPI.Types.CustomerTaxLocation
      StripeAPI.Types.DeletedApplication
      StripeAPI.Types.DeletedBankAccount
      StripeAPI.Types.DeletedCard
      StripeAPI.Types.DeletedCustomer
      StripeAPI.Types.DeletedDiscount
      StripeAPI.Types.DeletedInvoice
      StripeAPI.Types.DeletedPrice
      StripeAPI.Types.DeletedProduct
      StripeAPI.Types.DeletedTaxId
      StripeAPI.Types.Discount
      StripeAPI.Types.DiscountsResourceDiscountAmount
      StripeAPI.Types.DiscountsResourceStackableDiscount
      StripeAPI.Types.Dispute
      StripeAPI.Types.DisputeEnhancedEligibility
      StripeAPI.Types.DisputeEnhancedEligibilityVisaCompellingEvidence3
      StripeAPI.Types.DisputeEnhancedEligibilityVisaCompliance
      StripeAPI.Types.DisputeEnhancedEvidence
      StripeAPI.Types.DisputeEnhancedEvidenceVisaCompellingEvidence3
      StripeAPI.Types.DisputeEnhancedEvidenceVisaCompliance
      StripeAPI.Types.DisputeEvidence
      StripeAPI.Types.DisputeEvidenceDetails
      StripeAPI.Types.DisputePaymentMethodDetails
      StripeAPI.Types.DisputePaymentMethodDetailsAmazonPay
      StripeAPI.Types.DisputePaymentMethodDetailsCard
      StripeAPI.Types.DisputePaymentMethodDetailsKlarna
      StripeAPI.Types.DisputePaymentMethodDetailsPaypal
      StripeAPI.Types.DisputeTransactionShippingAddress
      StripeAPI.Types.DisputeVisaCompellingEvidence3DisputedTransaction
      StripeAPI.Types.DisputeVisaCompellingEvidence3PriorUndisputedTransaction
      StripeAPI.Types.EmailSent
      StripeAPI.Types.Error
      StripeAPI.Types.ExternalAccountRequirements
      StripeAPI.Types.Fee
      StripeAPI.Types.FeeRefund
      StripeAPI.Types.File
      StripeAPI.Types.FileLink
      StripeAPI.Types.FundingInstructionsBankTransferAbaRecord
      StripeAPI.Types.FundingInstructionsBankTransferFinancialAddress
      StripeAPI.Types.FundingInstructionsBankTransferIbanRecord
      StripeAPI.Types.FundingInstructionsBankTransferSortCodeRecord
      StripeAPI.Types.FundingInstructionsBankTransferSpeiRecord
      StripeAPI.Types.FundingInstructionsBankTransferSwiftRecord
      StripeAPI.Types.FundingInstructionsBankTransferZenginRecord
      StripeAPI.Types.InternalCard
      StripeAPI.Types.Invoice
      StripeAPI.Types.InvoiceInstallmentsCard
      StripeAPI.Types.InvoiceItemThresholdReason
      StripeAPI.Types.InvoiceLineItemPeriod
      StripeAPI.Types.InvoiceMandateOptionsCard
      StripeAPI.Types.InvoicePayment
      StripeAPI.Types.InvoicePaymentMethodOptionsAcssDebit
      StripeAPI.Types.InvoicePaymentMethodOptionsAcssDebitMandateOptions
      StripeAPI.Types.InvoicePaymentMethodOptionsBancontact
      StripeAPI.Types.InvoicePaymentMethodOptionsCard
      StripeAPI.Types.InvoicePaymentMethodOptionsCustomerBalance
      StripeAPI.Types.InvoicePaymentMethodOptionsCustomerBalanceBankTransfer
      StripeAPI.Types.InvoicePaymentMethodOptionsCustomerBalanceBankTransferEuBankTransfer
      StripeAPI.Types.InvoicePaymentMethodOptionsUsBankAccount
      StripeAPI.Types.InvoicePaymentMethodOptionsUsBankAccountLinkedAccountOptions
      StripeAPI.Types.InvoicePaymentMethodOptionsUsBankAccountLinkedAccountOptionsFilters
      StripeAPI.Types.InvoiceRenderingPdf
      StripeAPI.Types.InvoiceSettingCheckoutRenderingOptions
      StripeAPI.Types.InvoiceSettingCustomField
      StripeAPI.Types.InvoiceSettingCustomerRenderingOptions
      StripeAPI.Types.InvoiceSettingCustomerSetting
      StripeAPI.Types.InvoiceSettingSubscriptionSchedulePhaseSetting
      StripeAPI.Types.InvoiceSettingSubscriptionScheduleSetting
      StripeAPI.Types.InvoiceThresholdReason
      StripeAPI.Types.InvoicesPaymentMethodOptions
      StripeAPI.Types.InvoicesPaymentSettings
      StripeAPI.Types.InvoicesPaymentsInvoicePaymentAssociatedPayment
      StripeAPI.Types.InvoicesPaymentsInvoicePaymentStatusTransitions
      StripeAPI.Types.InvoicesResourceConfirmationSecret
      StripeAPI.Types.InvoicesResourceFromInvoice
      StripeAPI.Types.InvoicesResourceInvoiceRendering
      StripeAPI.Types.InvoicesResourceInvoiceTaxId
      StripeAPI.Types.InvoicesResourcePretaxCreditAmount
      StripeAPI.Types.InvoicesResourceShippingCost
      StripeAPI.Types.InvoicesResourceStatusTransitions
      StripeAPI.Types.Issuing_Authorization
      StripeAPI.Types.Issuing_Card
      StripeAPI.Types.Issuing_Cardholder
      StripeAPI.Types.Issuing_Dispute
      StripeAPI.Types.Issuing_PersonalizationDesign
      StripeAPI.Types.Issuing_PhysicalBundle
      StripeAPI.Types.Issuing_Token
      StripeAPI.Types.Issuing_Transaction
      StripeAPI.Types.IssuingAuthorizationAmountDetails
      StripeAPI.Types.IssuingAuthorizationAuthenticationExemption
      StripeAPI.Types.IssuingAuthorizationFleetCardholderPromptData
      StripeAPI.Types.IssuingAuthorizationFleetData
      StripeAPI.Types.IssuingAuthorizationFleetFuelPriceData
      StripeAPI.Types.IssuingAuthorizationFleetNonFuelPriceData
      StripeAPI.Types.IssuingAuthorizationFleetReportedBreakdown
      StripeAPI.Types.IssuingAuthorizationFleetTaxData
      StripeAPI.Types.IssuingAuthorizationFraudChallenge
      StripeAPI.Types.IssuingAuthorizationFuelData
      StripeAPI.Types.IssuingAuthorizationMerchantData
      StripeAPI.Types.IssuingAuthorizationNetworkData
      StripeAPI.Types.IssuingAuthorizationPendingRequest
      StripeAPI.Types.IssuingAuthorizationRequest
      StripeAPI.Types.IssuingAuthorizationThreeDSecure
      StripeAPI.Types.IssuingAuthorizationTreasury
      StripeAPI.Types.IssuingAuthorizationVerificationData
      StripeAPI.Types.IssuingCardApplePay
      StripeAPI.Types.IssuingCardAuthorizationControls
      StripeAPI.Types.IssuingCardGooglePay
      StripeAPI.Types.IssuingCardShipping
      StripeAPI.Types.IssuingCardShippingAddressValidation
      StripeAPI.Types.IssuingCardShippingCustoms
      StripeAPI.Types.IssuingCardSpendingLimit
      StripeAPI.Types.IssuingCardWallets
      StripeAPI.Types.IssuingCardholderAddress
      StripeAPI.Types.IssuingCardholderAuthorizationControls
      StripeAPI.Types.IssuingCardholderCardIssuing
      StripeAPI.Types.IssuingCardholderCompany
      StripeAPI.Types.IssuingCardholderIdDocument
      StripeAPI.Types.IssuingCardholderIndividual
      StripeAPI.Types.IssuingCardholderIndividualDob
      StripeAPI.Types.IssuingCardholderRequirements
      StripeAPI.Types.IssuingCardholderSpendingLimit
      StripeAPI.Types.IssuingCardholderUserTermsAcceptance
      StripeAPI.Types.IssuingCardholderVerification
      StripeAPI.Types.IssuingDisputeCanceledEvidence
      StripeAPI.Types.IssuingDisputeDuplicateEvidence
      StripeAPI.Types.IssuingDisputeEvidence
      StripeAPI.Types.IssuingDisputeFraudulentEvidence
      StripeAPI.Types.IssuingDisputeMerchandiseNotAsDescribedEvidence
      StripeAPI.Types.IssuingDisputeNoValidAuthorizationEvidence
      StripeAPI.Types.IssuingDisputeNotReceivedEvidence
      StripeAPI.Types.IssuingDisputeOtherEvidence
      StripeAPI.Types.IssuingDisputeServiceNotAsDescribedEvidence
      StripeAPI.Types.IssuingDisputeTreasury
      StripeAPI.Types.IssuingNetworkTokenAddress
      StripeAPI.Types.IssuingNetworkTokenDevice
      StripeAPI.Types.IssuingNetworkTokenMastercard
      StripeAPI.Types.IssuingNetworkTokenNetworkData
      StripeAPI.Types.IssuingNetworkTokenVisa
      StripeAPI.Types.IssuingNetworkTokenWalletProvider
      StripeAPI.Types.IssuingPersonalizationDesignCarrierText
      StripeAPI.Types.IssuingPersonalizationDesignPreferences
      StripeAPI.Types.IssuingPersonalizationDesignRejectionReasons
      StripeAPI.Types.IssuingPhysicalBundleFeatures
      StripeAPI.Types.IssuingTransactionAmountDetails
      StripeAPI.Types.IssuingTransactionFleetCardholderPromptData
      StripeAPI.Types.IssuingTransactionFleetData
      StripeAPI.Types.IssuingTransactionFleetFuelPriceData
      StripeAPI.Types.IssuingTransactionFleetNonFuelPriceData
      StripeAPI.Types.IssuingTransactionFleetReportedBreakdown
      StripeAPI.Types.IssuingTransactionFleetTaxData
      StripeAPI.Types.IssuingTransactionFlightData
      StripeAPI.Types.IssuingTransactionFlightDataLeg
      StripeAPI.Types.IssuingTransactionFuelData
      StripeAPI.Types.IssuingTransactionLodgingData
      StripeAPI.Types.IssuingTransactionNetworkData
      StripeAPI.Types.IssuingTransactionPurchaseDetails
      StripeAPI.Types.IssuingTransactionReceiptData
      StripeAPI.Types.IssuingTransactionTreasury
      StripeAPI.Types.Item
      StripeAPI.Types.KlarnaAddress
      StripeAPI.Types.KlarnaPayerDetails
      StripeAPI.Types.LegalEntityCompany
      StripeAPI.Types.LegalEntityCompanyVerification
      StripeAPI.Types.LegalEntityCompanyVerificationDocument
      StripeAPI.Types.LegalEntityDirectorshipDeclaration
      StripeAPI.Types.LegalEntityDob
      StripeAPI.Types.LegalEntityJapanAddress
      StripeAPI.Types.LegalEntityPersonVerification
      StripeAPI.Types.LegalEntityPersonVerificationDocument
      StripeAPI.Types.LegalEntityRegistrationDate
      StripeAPI.Types.LegalEntityUboDeclaration
      StripeAPI.Types.LineItem
      StripeAPI.Types.LineItemsDiscountAmount
      StripeAPI.Types.LineItemsTaxAmount
      StripeAPI.Types.LinkedAccountOptionsCommon
      StripeAPI.Types.Mandate
      StripeAPI.Types.MandateAcssDebit
      StripeAPI.Types.MandateAuBecsDebit
      StripeAPI.Types.MandateBacsDebit
      StripeAPI.Types.MandatePaymentMethodDetails
      StripeAPI.Types.MandatePaypal
      StripeAPI.Types.MandateSepaDebit
      StripeAPI.Types.MandateSingleUse
      StripeAPI.Types.MandateUsBankAccount
      StripeAPI.Types.Networks
      StripeAPI.Types.OnlineAcceptance
      StripeAPI.Types.PackageDimensions
      StripeAPI.Types.PaymentFlowsAmountDetails
      StripeAPI.Types.PaymentFlowsAmountDetailsClient
      StripeAPI.Types.PaymentFlowsAmountDetailsClientResourceTip
      StripeAPI.Types.PaymentFlowsAutomaticPaymentMethodsPaymentIntent
      StripeAPI.Types.PaymentFlowsAutomaticPaymentMethodsSetupIntent
      StripeAPI.Types.PaymentFlowsInstallmentOptions
      StripeAPI.Types.PaymentFlowsPaymentIntentPresentmentDetails
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsAlipayDetails
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsCardDetailsApiResourceEnterpriseFeaturesExtendedAuthorizationExtendedAuthorization
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsCardDetailsApiResourceEnterpriseFeaturesIncrementalAuthorizationIncrementalAuthorization
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsCardDetailsApiResourceEnterpriseFeaturesOvercaptureOvercapture
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsCardDetailsApiResourceMulticapture
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsCardPresentCommonWallet
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsFinancialConnectionsCommonLinkedAccountOptionsFilters
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsKakaoPayPaymentMethodOptions
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsKlarnaDob
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsNaverPayPaymentMethodOptions
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsPaycoPaymentMethodOptions
      StripeAPI.Types.PaymentFlowsPrivatePaymentMethodsSamsungPayPaymentMethodOptions
      StripeAPI.Types.PaymentIntent
      StripeAPI.Types.PaymentIntentCardProcessing
      StripeAPI.Types.PaymentIntentNextAction
      StripeAPI.Types.PaymentIntentNextActionAlipayHandleRedirect
      StripeAPI.Types.PaymentIntentNextActionBoleto
      StripeAPI.Types.PaymentIntentNextActionCardAwaitNotification
      StripeAPI.Types.PaymentIntentNextActionCashappHandleRedirectOrDisplayQrCode
      StripeAPI.Types.PaymentIntentNextActionCashappQrCode
      StripeAPI.Types.PaymentIntentNextActionDisplayBankTransferInstructions
      StripeAPI.Types.PaymentIntentNextActionDisplayMultibancoDetails
      StripeAPI.Types.PaymentIntentNextActionDisplayOxxoDetails
      StripeAPI.Types.PaymentIntentNextActionKonbini
      StripeAPI.Types.PaymentIntentNextActionKonbiniFamilymart
      StripeAPI.Types.PaymentIntentNextActionKonbiniLawson
      StripeAPI.Types.PaymentIntentNextActionKonbiniMinistop
      StripeAPI.Types.PaymentIntentNextActionKonbiniSeicomart
      StripeAPI.Types.PaymentIntentNextActionKonbiniStores
      StripeAPI.Types.PaymentIntentNextActionPaynowDisplayQrCode
      StripeAPI.Types.PaymentIntentNextActionPixDisplayQrCode
      StripeAPI.Types.PaymentIntentNextActionPromptpayDisplayQrCode
      StripeAPI.Types.PaymentIntentNextActionRedirectToUrl
      StripeAPI.Types.PaymentIntentNextActionSwishHandleRedirectOrDisplayQrCode
      StripeAPI.Types.PaymentIntentNextActionSwishQrCode
      StripeAPI.Types.PaymentIntentNextActionVerifyWithMicrodeposits
      StripeAPI.Types.PaymentIntentNextActionWechatPayDisplayQrCode
      StripeAPI.Types.PaymentIntentNextActionWechatPayRedirectToAndroidApp
      StripeAPI.Types.PaymentIntentNextActionWechatPayRedirectToIosApp
      StripeAPI.Types.PaymentIntentPaymentMethodOptions
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsAcssDebit
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsAuBecsDebit
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsBacsDebit
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsBlik
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsCard
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsEps
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsLink
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsMandateOptionsAcssDebit
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsMandateOptionsBacsDebit
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsMandateOptionsSepaDebit
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsMobilepay
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsNzBankAccount
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsSepaDebit
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsSwish
      StripeAPI.Types.PaymentIntentPaymentMethodOptionsUsBankAccount
      StripeAPI.Types.PaymentIntentProcessing
      StripeAPI.Types.PaymentIntentProcessingCustomerNotification
      StripeAPI.Types.PaymentIntentTypeSpecificPaymentMethodOptionsClient
      StripeAPI.Types.PaymentLink
      StripeAPI.Types.PaymentLinksResourceAfterCompletion
      StripeAPI.Types.PaymentLinksResourceAutomaticTax
      StripeAPI.Types.PaymentLinksResourceCompletedSessions
      StripeAPI.Types.PaymentLinksResourceCompletionBehaviorConfirmationPage
      StripeAPI.Types.PaymentLinksResourceCompletionBehaviorRedirect
      StripeAPI.Types.PaymentLinksResourceConsentCollection
      StripeAPI.Types.PaymentLinksResourceCustomFields
      StripeAPI.Types.PaymentLinksResourceCustomFieldsDropdown
      StripeAPI.Types.PaymentLinksResourceCustomFieldsDropdownOption
      StripeAPI.Types.PaymentLinksResourceCustomFieldsLabel
      StripeAPI.Types.PaymentLinksResourceCustomFieldsNumeric
      StripeAPI.Types.PaymentLinksResourceCustomFieldsText
      StripeAPI.Types.PaymentLinksResourceCustomText
      StripeAPI.Types.PaymentLinksResourceCustomTextPosition
      StripeAPI.Types.PaymentLinksResourceInvoiceCreation
      StripeAPI.Types.PaymentLinksResourceInvoiceSettings
      StripeAPI.Types.PaymentLinksResourceOptionalItem
      StripeAPI.Types.PaymentLinksResourceOptionalItemAdjustableQuantity
      StripeAPI.Types.PaymentLinksResourcePaymentIntentData
      StripeAPI.Types.PaymentLinksResourcePaymentMethodReuseAgreement
      StripeAPI.Types.PaymentLinksResourcePhoneNumberCollection
      StripeAPI.Types.PaymentLinksResourceRestrictions
      StripeAPI.Types.PaymentLinksResourceShippingAddressCollection
      StripeAPI.Types.PaymentLinksResourceShippingOption
      StripeAPI.Types.PaymentLinksResourceSubscriptionData
      StripeAPI.Types.PaymentLinksResourceSubscriptionDataInvoiceSettings
      StripeAPI.Types.PaymentLinksResourceTaxIdCollection
      StripeAPI.Types.PaymentLinksResourceTransferData
      StripeAPI.Types.PaymentMethod
      StripeAPI.Types.PaymentMethodAcssDebit
      StripeAPI.Types.PaymentMethodAuBecsDebit
      StripeAPI.Types.PaymentMethodBacsDebit
      StripeAPI.Types.PaymentMethodBoleto
      StripeAPI.Types.PaymentMethodCard
      StripeAPI.Types.PaymentMethodCardChecks
      StripeAPI.Types.PaymentMethodCardGeneratedCard
      StripeAPI.Types.PaymentMethodCardPresent
      StripeAPI.Types.PaymentMethodCardPresentNetworks
      StripeAPI.Types.PaymentMethodCardWallet
      StripeAPI.Types.PaymentMethodCardWalletMasterpass
      StripeAPI.Types.PaymentMethodCardWalletVisaCheckout
      StripeAPI.Types.PaymentMethodCashapp
      StripeAPI.Types.PaymentMethodConfigBizPaymentMethodConfigurationDetails
      StripeAPI.Types.PaymentMethodDetails
      StripeAPI.Types.PaymentMethodDetailsAchCreditTransfer
      StripeAPI.Types.PaymentMethodDetailsAchDebit
      StripeAPI.Types.PaymentMethodDetailsAcssDebit
      StripeAPI.Types.PaymentMethodDetailsAffirm
      StripeAPI.Types.PaymentMethodDetailsAfterpayClearpay
      StripeAPI.Types.PaymentMethodDetailsAlma
      StripeAPI.Types.PaymentMethodDetailsAmazonPay
      StripeAPI.Types.PaymentMethodDetailsAuBecsDebit
      StripeAPI.Types.PaymentMethodDetailsBacsDebit
      StripeAPI.Types.PaymentMethodDetailsBancontact
      StripeAPI.Types.PaymentMethodDetailsBillie
      StripeAPI.Types.PaymentMethodDetailsBlik
      StripeAPI.Types.PaymentMethodDetailsBoleto
      StripeAPI.Types.PaymentMethodDetailsCard
      StripeAPI.Types.PaymentMethodDetailsCardChecks
      StripeAPI.Types.PaymentMethodDetailsCardInstallments
      StripeAPI.Types.PaymentMethodDetailsCardInstallmentsPlan
      StripeAPI.Types.PaymentMethodDetailsCardNetworkToken
      StripeAPI.Types.PaymentMethodDetailsCardPresent
      StripeAPI.Types.PaymentMethodDetailsCardPresentOffline
      StripeAPI.Types.PaymentMethodDetailsCardPresentReceipt
      StripeAPI.Types.PaymentMethodDetailsCardWallet
      StripeAPI.Types.PaymentMethodDetailsCardWalletMasterpass
      StripeAPI.Types.PaymentMethodDetailsCardWalletVisaCheckout
      StripeAPI.Types.PaymentMethodDetailsCashapp
      StripeAPI.Types.PaymentMethodDetailsCrypto
      StripeAPI.Types.PaymentMethodDetailsEps
      StripeAPI.Types.PaymentMethodDetailsFpx
      StripeAPI.Types.PaymentMethodDetailsGiropay
      StripeAPI.Types.PaymentMethodDetailsGrabpay
      StripeAPI.Types.PaymentMethodDetailsIdeal
      StripeAPI.Types.PaymentMethodDetailsInteracPresent
      StripeAPI.Types.PaymentMethodDetailsInteracPresentReceipt
      StripeAPI.Types.PaymentMethodDetailsKakaoPay
      StripeAPI.Types.PaymentMethodDetailsKlarna
      StripeAPI.Types.PaymentMethodDetailsKonbini
      StripeAPI.Types.PaymentMethodDetailsKonbiniStore
      StripeAPI.Types.PaymentMethodDetailsKrCard
      StripeAPI.Types.PaymentMethodDetailsLink
      StripeAPI.Types.PaymentMethodDetailsMobilepay
      StripeAPI.Types.PaymentMethodDetailsMultibanco
      StripeAPI.Types.PaymentMethodDetailsNaverPay
      StripeAPI.Types.PaymentMethodDetailsNzBankAccount
      StripeAPI.Types.PaymentMethodDetailsOxxo
      StripeAPI.Types.PaymentMethodDetailsP24
      StripeAPI.Types.PaymentMethodDetailsPassthroughCard
      StripeAPI.Types.PaymentMethodDetailsPayco
      StripeAPI.Types.PaymentMethodDetailsPaynow
      StripeAPI.Types.PaymentMethodDetailsPaypal
      StripeAPI.Types.PaymentMethodDetailsPix
      StripeAPI.Types.PaymentMethodDetailsPromptpay
      StripeAPI.Types.PaymentMethodDetailsRevolutPay
      StripeAPI.Types.PaymentMethodDetailsSamsungPay
      StripeAPI.Types.PaymentMethodDetailsSatispay
      StripeAPI.Types.PaymentMethodDetailsSepaDebit
      StripeAPI.Types.PaymentMethodDetailsSofort
      StripeAPI.Types.PaymentMethodDetailsSwish
      StripeAPI.Types.PaymentMethodDetailsUsBankAccount
      StripeAPI.Types.PaymentMethodDetailsWechatPay
      StripeAPI.Types.PaymentMethodEps
      StripeAPI.Types.PaymentMethodFpx
      StripeAPI.Types.PaymentMethodIdeal
      StripeAPI.Types.PaymentMethodInteracPresent
      StripeAPI.Types.PaymentMethodKlarna
      StripeAPI.Types.PaymentMethodKrCard
      StripeAPI.Types.PaymentMethodLink
      StripeAPI.Types.PaymentMethodNaverPay
      StripeAPI.Types.PaymentMethodNzBankAccount
      StripeAPI.Types.PaymentMethodOptionsAffirm
      StripeAPI.Types.PaymentMethodOptionsAfterpayClearpay
      StripeAPI.Types.PaymentMethodOptionsAlipay
      StripeAPI.Types.PaymentMethodOptionsAlma
      StripeAPI.Types.PaymentMethodOptionsAmazonPay
      StripeAPI.Types.PaymentMethodOptionsBancontact
      StripeAPI.Types.PaymentMethodOptionsBillie
      StripeAPI.Types.PaymentMethodOptionsBoleto
      StripeAPI.Types.PaymentMethodOptionsCardInstallments
      StripeAPI.Types.PaymentMethodOptionsCardMandateOptions
      StripeAPI.Types.PaymentMethodOptionsCardPresent
      StripeAPI.Types.PaymentMethodOptionsCardPresentRouting
      StripeAPI.Types.PaymentMethodOptionsCashapp
      StripeAPI.Types.PaymentMethodOptionsCrypto
      StripeAPI.Types.PaymentMethodOptionsCustomerBalance
      StripeAPI.Types.PaymentMethodOptionsCustomerBalanceBankTransfer
      StripeAPI.Types.PaymentMethodOptionsCustomerBalanceEuBankAccount
      StripeAPI.Types.PaymentMethodOptionsFpx
      StripeAPI.Types.PaymentMethodOptionsGiropay
      StripeAPI.Types.PaymentMethodOptionsGrabpay
      StripeAPI.Types.PaymentMethodOptionsIdeal
      StripeAPI.Types.PaymentMethodOptionsKlarna
      StripeAPI.Types.PaymentMethodOptionsKonbini
      StripeAPI.Types.PaymentMethodOptionsKrCard
      StripeAPI.Types.PaymentMethodOptionsMultibanco
      StripeAPI.Types.PaymentMethodOptionsOxxo
      StripeAPI.Types.PaymentMethodOptionsP24
      StripeAPI.Types.PaymentMethodOptionsPaynow
      StripeAPI.Types.PaymentMethodOptionsPaypal
      StripeAPI.Types.PaymentMethodOptionsPix
      StripeAPI.Types.PaymentMethodOptionsPromptpay
      StripeAPI.Types.PaymentMethodOptionsRevolutPay
      StripeAPI.Types.PaymentMethodOptionsSatispay
      StripeAPI.Types.PaymentMethodOptionsSofort
      StripeAPI.Types.PaymentMethodOptionsTwint
      StripeAPI.Types.PaymentMethodOptionsUsBankAccountMandateOptions
      StripeAPI.Types.PaymentMethodOptionsWechatPay
      StripeAPI.Types.PaymentMethodOptionsZip
      StripeAPI.Types.PaymentMethodP24
      StripeAPI.Types.PaymentMethodPaypal
      StripeAPI.Types.PaymentMethodSepaDebit
      StripeAPI.Types.PaymentMethodSofort
      StripeAPI.Types.PaymentMethodUsBankAccount
      StripeAPI.Types.PaymentMethodUsBankAccountBlocked
      StripeAPI.Types.PaymentMethodUsBankAccountStatusDetails
      StripeAPI.Types.PaymentPagesCheckoutSessionAdaptivePricing
      StripeAPI.Types.PaymentPagesCheckoutSessionAfterExpiration
      StripeAPI.Types.PaymentPagesCheckoutSessionAfterExpirationRecovery
      StripeAPI.Types.PaymentPagesCheckoutSessionAutomaticTax
      StripeAPI.Types.PaymentPagesCheckoutSessionCheckoutAddressDetails
      StripeAPI.Types.PaymentPagesCheckoutSessionCollectedInformation
      StripeAPI.Types.PaymentPagesCheckoutSessionConsent
      StripeAPI.Types.PaymentPagesCheckoutSessionConsentCollection
      StripeAPI.Types.PaymentPagesCheckoutSessionCurrencyConversion
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomFields
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomFieldsDropdown
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomFieldsLabel
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomFieldsNumeric
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomFieldsOption
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomFieldsText
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomText
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomTextPosition
      StripeAPI.Types.PaymentPagesCheckoutSessionCustomerDetails
      StripeAPI.Types.PaymentPagesCheckoutSessionDiscount
      StripeAPI.Types.PaymentPagesCheckoutSessionInvoiceCreation
      StripeAPI.Types.PaymentPagesCheckoutSessionInvoiceSettings
      StripeAPI.Types.PaymentPagesCheckoutSessionOptionalItem
      StripeAPI.Types.PaymentPagesCheckoutSessionOptionalItemAdjustableQuantity
      StripeAPI.Types.PaymentPagesCheckoutSessionPaymentMethodReuseAgreement
      StripeAPI.Types.PaymentPagesCheckoutSessionPermissions
      StripeAPI.Types.PaymentPagesCheckoutSessionPhoneNumberCollection
      StripeAPI.Types.PaymentPagesCheckoutSessionSavedPaymentMethodOptions
      StripeAPI.Types.PaymentPagesCheckoutSessionShippingAddressCollection
      StripeAPI.Types.PaymentPagesCheckoutSessionShippingCost
      StripeAPI.Types.PaymentPagesCheckoutSessionShippingOption
      StripeAPI.Types.PaymentPagesCheckoutSessionTaxId
      StripeAPI.Types.PaymentPagesCheckoutSessionTaxIdCollection
      StripeAPI.Types.PaymentPagesCheckoutSessionTotalDetails
      StripeAPI.Types.PaymentPagesCheckoutSessionTotalDetailsResourceBreakdown
      StripeAPI.Types.PaymentPagesPrivateCardPaymentMethodOptionsResourceRestrictions
      StripeAPI.Types.Payout
      StripeAPI.Types.PayoutsTraceId
      StripeAPI.Types.PaypalSellerProtection
      StripeAPI.Types.Person
      StripeAPI.Types.PersonAdditionalTosAcceptance
      StripeAPI.Types.PersonAdditionalTosAcceptances
      StripeAPI.Types.PersonEthnicityDetails
      StripeAPI.Types.PersonFutureRequirements
      StripeAPI.Types.PersonRaceDetails
      StripeAPI.Types.PersonRelationship
      StripeAPI.Types.PersonRequirements
      StripeAPI.Types.PersonUsCfpbData
      StripeAPI.Types.PlatformEarningFeeSource
      StripeAPI.Types.PortalBusinessProfile
      StripeAPI.Types.PortalCustomerUpdate
      StripeAPI.Types.PortalFeatures
      StripeAPI.Types.PortalFlowsAfterCompletionHostedConfirmation
      StripeAPI.Types.PortalFlowsAfterCompletionRedirect
      StripeAPI.Types.PortalFlowsCouponOffer
      StripeAPI.Types.PortalFlowsFlow
      StripeAPI.Types.PortalFlowsFlowAfterCompletion
      StripeAPI.Types.PortalFlowsFlowSubscriptionCancel
      StripeAPI.Types.PortalFlowsFlowSubscriptionUpdate
      StripeAPI.Types.PortalFlowsFlowSubscriptionUpdateConfirm
      StripeAPI.Types.PortalFlowsRetention
      StripeAPI.Types.PortalFlowsSubscriptionUpdateConfirmDiscount
      StripeAPI.Types.PortalFlowsSubscriptionUpdateConfirmItem
      StripeAPI.Types.PortalInvoiceList
      StripeAPI.Types.PortalLoginPage
      StripeAPI.Types.PortalPaymentMethodUpdate
      StripeAPI.Types.PortalResourceScheduleUpdateAtPeriodEnd
      StripeAPI.Types.PortalResourceScheduleUpdateAtPeriodEndCondition
      StripeAPI.Types.PortalSubscriptionCancel
      StripeAPI.Types.PortalSubscriptionCancellationReason
      StripeAPI.Types.PortalSubscriptionUpdate
      StripeAPI.Types.PortalSubscriptionUpdateProduct
      StripeAPI.Types.PortalSubscriptionUpdateProductAdjustableQuantity
      StripeAPI.Types.Price
      StripeAPI.Types.PriceTier
      StripeAPI.Types.Product
      StripeAPI.Types.ProductMarketingFeature
      StripeAPI.Types.PromotionCode
      StripeAPI.Types.PromotionCodesResourceRestrictions
      StripeAPI.Types.RadarRadarOptions
      StripeAPI.Types.RadarReviewResourceLocation
      StripeAPI.Types.RadarReviewResourceSession
      StripeAPI.Types.Recurring
      StripeAPI.Types.Refund
      StripeAPI.Types.RefundDestinationDetails
      StripeAPI.Types.RefundDestinationDetailsBlik
      StripeAPI.Types.RefundDestinationDetailsBrBankTransfer
      StripeAPI.Types.RefundDestinationDetailsCard
      StripeAPI.Types.RefundDestinationDetailsEuBankTransfer
      StripeAPI.Types.RefundDestinationDetailsGbBankTransfer
      StripeAPI.Types.RefundDestinationDetailsJpBankTransfer
      StripeAPI.Types.RefundDestinationDetailsMultibanco
      StripeAPI.Types.RefundDestinationDetailsMxBankTransfer
      StripeAPI.Types.RefundDestinationDetailsP24
      StripeAPI.Types.RefundDestinationDetailsPaypal
      StripeAPI.Types.RefundDestinationDetailsSwish
      StripeAPI.Types.RefundDestinationDetailsThBankTransfer
      StripeAPI.Types.RefundDestinationDetailsUsBankTransfer
      StripeAPI.Types.RefundNextAction
      StripeAPI.Types.RefundNextActionDisplayDetails
      StripeAPI.Types.ReserveTransaction
      StripeAPI.Types.Review
      StripeAPI.Types.RevolutPayUnderlyingPaymentMethodFundingDetails
      StripeAPI.Types.Rule
      StripeAPI.Types.SchedulesPhaseAutomaticTax
      StripeAPI.Types.SepaDebitGeneratedFrom
      StripeAPI.Types.SetupAttempt
      StripeAPI.Types.SetupAttemptPaymentMethodDetails
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsBancontact
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsCard
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsCardChecks
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsCardPresent
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsCardWallet
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsIdeal
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsNaverPay
      StripeAPI.Types.SetupAttemptPaymentMethodDetailsSofort
      StripeAPI.Types.SetupIntent
      StripeAPI.Types.SetupIntentNextAction
      StripeAPI.Types.SetupIntentNextActionRedirectToUrl
      StripeAPI.Types.SetupIntentNextActionVerifyWithMicrodeposits
      StripeAPI.Types.SetupIntentPaymentMethodOptions
      StripeAPI.Types.SetupIntentPaymentMethodOptionsAcssDebit
      StripeAPI.Types.SetupIntentPaymentMethodOptionsBacsDebit
      StripeAPI.Types.SetupIntentPaymentMethodOptionsCard
      StripeAPI.Types.SetupIntentPaymentMethodOptionsCardMandateOptions
      StripeAPI.Types.SetupIntentPaymentMethodOptionsKlarna
      StripeAPI.Types.SetupIntentPaymentMethodOptionsMandateOptionsAcssDebit
      StripeAPI.Types.SetupIntentPaymentMethodOptionsMandateOptionsBacsDebit
      StripeAPI.Types.SetupIntentPaymentMethodOptionsMandateOptionsSepaDebit
      StripeAPI.Types.SetupIntentPaymentMethodOptionsPaypal
      StripeAPI.Types.SetupIntentPaymentMethodOptionsSepaDebit
      StripeAPI.Types.SetupIntentPaymentMethodOptionsUsBankAccount
      StripeAPI.Types.SetupIntentTypeSpecificPaymentMethodOptionsClient
      StripeAPI.Types.Shipping
      StripeAPI.Types.ShippingRate
      StripeAPI.Types.ShippingRateDeliveryEstimate
      StripeAPI.Types.ShippingRateDeliveryEstimateBound
      StripeAPI.Types.ShippingRateFixedAmount
      StripeAPI.Types.Source
      StripeAPI.Types.SourceCodeVerificationFlow
      StripeAPI.Types.SourceOrder
      StripeAPI.Types.SourceOrderItem
      StripeAPI.Types.SourceOwner
      StripeAPI.Types.SourceReceiverFlow
      StripeAPI.Types.SourceRedirectFlow
      StripeAPI.Types.SourceTypeAchCreditTransfer
      StripeAPI.Types.SourceTypeAchDebit
      StripeAPI.Types.SourceTypeAcssDebit
      StripeAPI.Types.SourceTypeAlipay
      StripeAPI.Types.SourceTypeAuBecsDebit
      StripeAPI.Types.SourceTypeBancontact
      StripeAPI.Types.SourceTypeCard
      StripeAPI.Types.SourceTypeCardPresent
      StripeAPI.Types.SourceTypeEps
      StripeAPI.Types.SourceTypeGiropay
      StripeAPI.Types.SourceTypeIdeal
      StripeAPI.Types.SourceTypeKlarna
      StripeAPI.Types.SourceTypeMultibanco
      StripeAPI.Types.SourceTypeP24
      StripeAPI.Types.SourceTypeSepaDebit
      StripeAPI.Types.SourceTypeSofort
      StripeAPI.Types.SourceTypeThreeDSecure
      StripeAPI.Types.SourceTypeWechat
      StripeAPI.Types.Subscription
      StripeAPI.Types.SubscriptionAutomaticTax
      StripeAPI.Types.SubscriptionBillingThresholds
      StripeAPI.Types.SubscriptionItem
      StripeAPI.Types.SubscriptionItemBillingThresholds
      StripeAPI.Types.SubscriptionPaymentMethodOptionsCard
      StripeAPI.Types.SubscriptionPendingInvoiceItemInterval
      StripeAPI.Types.SubscriptionSchedule
      StripeAPI.Types.SubscriptionScheduleAddInvoiceItem
      StripeAPI.Types.SubscriptionScheduleAddInvoiceItemPeriod
      StripeAPI.Types.SubscriptionScheduleConfigurationItem
      StripeAPI.Types.SubscriptionScheduleCurrentPhase
      StripeAPI.Types.SubscriptionSchedulePhaseConfiguration
      StripeAPI.Types.SubscriptionSchedulesResourceDefaultSettings
      StripeAPI.Types.SubscriptionSchedulesResourceDefaultSettingsAutomaticTax
      StripeAPI.Types.SubscriptionSchedulesResourceInvoiceItemPeriodResourcePeriodEnd
      StripeAPI.Types.SubscriptionSchedulesResourceInvoiceItemPeriodResourcePeriodStart
      StripeAPI.Types.SubscriptionTransferData
      StripeAPI.Types.SubscriptionsResourceBillingCycleAnchorConfig
      StripeAPI.Types.SubscriptionsResourceBillingMode
      StripeAPI.Types.SubscriptionsResourcePauseCollection
      StripeAPI.Types.SubscriptionsResourcePaymentMethodOptions
      StripeAPI.Types.SubscriptionsResourcePaymentSettings
      StripeAPI.Types.SubscriptionsResourcePendingUpdate
      StripeAPI.Types.SubscriptionsResourceSubscriptionInvoiceSettings
      StripeAPI.Types.SubscriptionsTrialsResourceEndBehavior
      StripeAPI.Types.SubscriptionsTrialsResourceTrialSettings
      StripeAPI.Types.TaxCode
      StripeAPI.Types.TaxDeductedAtSource
      StripeAPI.Types.TaxIDsOwner
      StripeAPI.Types.TaxId
      StripeAPI.Types.TaxIdVerification
      StripeAPI.Types.TaxRate
      StripeAPI.Types.TaxRateFlatAmount
      StripeAPI.Types.TestHelpers_TestClock
      StripeAPI.Types.ThreeDSecureDetails
      StripeAPI.Types.ThreeDSecureDetailsCharge
      StripeAPI.Types.ThreeDSecureUsage
      StripeAPI.Types.TokenCardNetworks
      StripeAPI.Types.Topup
      StripeAPI.Types.Transfer
      StripeAPI.Types.TransferData
      StripeAPI.Types.TransferReversal
      StripeAPI.Types.TransferSchedule
      StripeAPI.Types.TransformQuantity
      StripeAPI.Types.UsBankAccountNetworks
      StripeAPI.Configuration
      StripeAPI.SecuritySchemes
      StripeAPI.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
